input embeddings and samples construction

--- a/sample_construction.ipynb
+++ b/sample_construction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = np.load(\"../processed_data/train_data.npy\")"
+    "train_data = np.load(\"processed_data/train_data.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "train_embeddings_list = []\n",
     "train_sentence_cum_lengths = []\n",
     "valid_train_docs = 0\n",
-    "train_exception_passages = [886, 1990, 2709, 2710]\n",
+    "train_exception_passages = [886, 1990, 2709, 2710, 1687,2200, 2724]\n",
     "negative_samples_factor = 5\n",
     "train_positive_pairs = []\n",
     "train_negative_pairs = []"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,14 @@
       "processed docs =  1700\n",
       "processed docs =  1800\n",
       "processed docs =  1900\n",
-      "processed docs =  2000\n"
+      "processed docs =  2000\n",
+      "processed docs =  2100\n",
+      "processed docs =  2300\n",
+      "processed docs =  2400\n",
+      "processed docs =  2500\n",
+      "processed docs =  2600\n",
+      "processed docs =  2700\n",
+      "processed docs =  2800\n"
      ]
     }
    ],
@@ -157,9 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1189 1613 2802\n"
+     ]
+    }
+   ],
    "source": [
     "skip_passages = len(mismatch_tokenization) + len(train_exception_passages)\n",
     "valid_passages = len(id_to_passageid_dict)\n",
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,22 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"train_positive_pairs.npy\", train_positive_pairs)\n",
     "np.save(\"train_negative_pairs.npy\", train_negative_pairs)\n",
-    "np.save(\"train_passage_list.npy\", train_passage_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(train_positive_pairs), len(train_negative_pairs), len(train_passage_list)"
+    "np.save(\"train_passage_list.npy\", train_passage_list)\n",
+    "np.save(\"valid_id_to_original_id_dict.npy\", valid_id_to_original_id_dict)"
    ]
   }
  ],
