utility functions notebook and training parameters update

--- a/sample_construction.ipynb
+++ b/sample_construction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = np.load(\"processed_data/train_data.npy\")"
+    "train_data = np.load(\"processed_data/test_data.npy\") #change path based on requirement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -71,31 +71,7 @@
       "processed docs =  0\n",
       "processed docs =  100\n",
       "processed docs =  200\n",
-      "processed docs =  300\n",
-      "processed docs =  400\n",
-      "processed docs =  500\n",
-      "processed docs =  600\n",
-      "processed docs =  700\n",
-      "processed docs =  800\n",
-      "processed docs =  900\n",
-      "processed docs =  1000\n",
-      "processed docs =  1100\n",
-      "processed docs =  1200\n",
-      "processed docs =  1300\n",
-      "processed docs =  1400\n",
-      "processed docs =  1500\n",
-      "processed docs =  1600\n",
-      "processed docs =  1700\n",
-      "processed docs =  1800\n",
-      "processed docs =  1900\n",
-      "processed docs =  2000\n",
-      "processed docs =  2100\n",
-      "processed docs =  2300\n",
-      "processed docs =  2400\n",
-      "processed docs =  2500\n",
-      "processed docs =  2600\n",
-      "processed docs =  2700\n",
-      "processed docs =  2800\n"
+      "processed docs =  300\n"
      ]
     }
    ],
@@ -164,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1189 1613 2802\n"
+      "133 222 355\n"
      ]
     }
    ],
@@ -183,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,15 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"train_positive_pairs.npy\", train_positive_pairs)\n",
-    "np.save(\"train_negative_pairs.npy\", train_negative_pairs)\n",
-    "np.save(\"train_passage_list.npy\", train_passage_list)\n",
-    "np.save(\"valid_id_to_original_id_dict.npy\", valid_id_to_original_id_dict)"
+    "# np.save(\"processed_data/test_positive_pairs.npy\", train_positive_pairs)\n",
+    "np.save(\"processed_data/small_test_negative_pairs.npy\", train_negative_pairs)\n",
+    "# np.save(\"processed_data/test_passage_list.npy\", train_passage_list)\n",
+    "# np.save(\"processed_data/test_valid_id_to_original_id_dict.npy\", valid_id_to_original_id_dict)\n",
+    "# np.save(\"processed_data/test_coref_list.npy\", train_coref_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
